--- a/online-notepad/index.html
+++ b/online-notepad/index.html
@@ -7,7 +7,7 @@
     <!-- Meta Tags for SEO and Social Media -->
     <meta name="description" content="Use our free online notepad to write, edit, and save notes easily. No login required. A fast and lightweight web-based notepad tool.">
     <meta name="keywords" content="online notepad, free notepad, web-based notepad, note taking tool, simple notepad">
-    <meta name="author" content="Oussama Achouri">
+    <meta name="author" content="Oussama Achoi">
     <meta name="robots" content="index, follow">
 
     <meta property="og:title" content="Online Notepad – Free & Simple Web-Based Note-Taking Tool">
