--- a/index.html
+++ b/index.html
@@ -1,131 +1,77 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Me Coding</title>
-
-    <!-- Meta Tags for SEO and Social Media -->
-    <meta name="description" content="Explore our collection of free online calculator tools. Simple, fast, and easy to use calculators for various needs.">
-    <meta name="keywords" content="online calculators, free calculators, web-based calculators, calculator tools, simple calculators, me coding">
-    <meta name="author" content="Oussama Achouri">
-    <meta name="robots" content="index, follow">
-
-    <meta property="og:title" content="Me Coding – Free Online Calculators">
-    <meta property="og:description" content="A collection of simple and useful online calculator tools. No sign-up required.">
-    <meta property="og:image" content="https://onlinenotepad.space/calculator-hub.png">
-    <meta property="og:url" content="https://onlinenotepad.space/">
-    <meta property="og:type" content="website">
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Me Coding – Free Online Calculators">
-    <meta name="twitter:description" content="Access a variety of free online calculator tools easily from your browser.">
-    <meta name="twitter:image" content="https://onlinenotepad.space/calculator-hub.png">
-
-    <!-- Link to Favicon -->
-    <link rel="canonical" href="https://onlinenotepad.space">
-    <link rel="icon" type="image/png" href="https://onlinenotepad.space/favicon-16x16.png">
-
-    <!-- Link to Stylesheets -->
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-
-    <!-- JSON-LD Schema for Structured Data -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "Me Coding",
-        "url": "https://onlinenotepad.space/",
-        "description": "A hub offering a variety of free online calculator tools for different purposes.",
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "https://onlinenotepad.space/search?q={search_term_string}",
-          "query-input": "required name=search_term_string"
-        },
-         "author": {
-            "@type": "Person",
-            "name": "Oussama Achouri"
-        }
-    }
-    </script>
-
-    <!-- Add the Ezoic script here -->
-    <script src="https://go.ezoic.net/ezoic.js"></script>
-    <!-- Basic Import Map (if needed for future JS modules) -->
-    <script type="importmap">
-    {
-      "imports": {
-
-      }
-    }
-    </script>
+    <title>me coding - Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="main-nav">
-        <a href="index.html" class="nav-link active"><i class="ri-home-line"></i> Home</a>
-        <a href="index.html#calculatorGallery" class="nav-link"><i class="ri-calculator-line"></i> Calculators</a>
-        <a href="contact-us.html" class="nav-link"><i class="ri-mail-line"></i> Contact Us</a>
-        <a href="privacy-policy.html" class="nav-link"><i class="ri-shield-line"></i> Privacy Policy</a>
-    </nav>
-    <div class="ad-container top-ad">
-        <div class="ad-placeholder">Advertisement</div>
-    </div>
+    <header>
+        <h1>me coding</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html" class="active">Home</a></li>
+                <li><a href="/calculators.html">Calculators</a></li>
+                <li><a href="/contact.html">Contact Us</a></li>
+                <li><a href="/privacy.html">Privacy Policy</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <div class="main-content home-content">
-        <header class="home-header">
-            <h1>Welcome to Me Coding - Calculator Tools Hub</h1>
-            <p>Find a collection of useful and easy-to-use online calculators below.</p>
-        </header>
-
-        <section class="calculator-gallery" id="calculatorGallery">
-            <h2>Calculator Gallery</h2>
-            <div class="gallery-grid">
-                <div class="calculator-card">
-                    <div class="card-icon-bg"><i class="ri-calculator-line card-icon"></i></div>
-                    <h3>Basic Calculator</h3>
-                    <p>A simple calculator for everyday arithmetic operations.</p>
-                    <a href="#" class="card-link">Use Calculator</a>
+    <main>
+        <section id="home">
+            <div class="home-content">
+                <div class="home-text">
+                    <h2>Welcome to me coding!</h2>
+                    <p>Your go-to place for a growing collection of handy online tools and calculators. We aim to simplify complex tasks and provide quick answers for everyday needs.</p>
+                    <p>Explore our tools, and feel free to <a href="/contact.html" class="cta-link">contact us</a> with suggestions!</p>
+                    <a href="/calculators.html" class="cta-button">Browse All Calculators</a>
                 </div>
-                <div class="calculator-card">
-                     <div class="card-icon-bg"><i class="ri-percent-line card-icon"></i></div>
-                    <h3>Percentage Calculator</h3>
-                    <p>Calculate percentages, discounts, and increases easily.</p>
-                    <a href="#" class="card-link">Use Calculator</a>
+                <div class="home-visual">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 150" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="10" y="10" width="180" height="130" rx="10" ry="10" fill="#e9ecef" stroke="none"/>
+                        <path d="M40 130 L10 130 L10 20 L90 20 L90 60" stroke="#007bff" stroke-width="3" fill="none"/>
+                        <rect x="35" y="45" width="130" height="90" rx="8" ry="8" stroke="#6c757d" stroke-width="2.5" fill="#f8f9fa"/>
+                        <line x1="50" y1="65" x2="100" y2="65" stroke="#adb5bd"/>
+                        <line x1="50" y1="80" x2="150" y2="80" stroke="#adb5bd"/>
+                        <line x1="50" y1="95" x2="120" y2="95" stroke="#adb5bd"/>
+                        <line x1="50" y1="110" x2="140" y2="110" stroke="#adb5bd"/>
+                        <circle cx="155" cy="65" r="8" fill="#007bff"/>
+                        <path d="M120 25 L180 25 M120 35 L160 35" stroke="#adb5bd" stroke-width="2"/>
+                    </svg>
                 </div>
-                <div class="calculator-card">
-                     <div class="card-icon-bg"><i class="ri-ruler-2-line card-icon"></i></div>
-                    <h3>Unit Converter</h3>
-                    <p>Convert between different units of measurement (length, weight, etc.).</p>
-                    <a href="#" class="card-link">Use Calculator</a>
-                </div>
-                <div class="calculator-card">
-                     <div class="card-icon-bg"><i class="ri-scales-3-line card-icon"></i></div>
-                    <h3>BMI Calculator</h3>
-                    <p>Calculate your Body Mass Index (BMI).</p>
-                    <a href="#" class="card-link">Use Calculator</a>
-                </div>
-                <!-- Add more calculator cards here as needed -->
             </div>
         </section>
 
-        <section class="about-section">
-             <h2>About Our Tools</h2>
-             <p>We aim to provide simple, free, and accessible online tools for everyone. Our calculators are designed to be intuitive and work directly in your browser without requiring any installation. Explore the gallery and find the tool you need!</p>
+        <section id="featured-calculators">
+             <h2>Featured Tool</h2>
+             <div class="calculator-grid featured-grid">
+                 <a href="/calculators.html" class="calculator-card-link">
+                     <div class="calculator-card">
+                         <svg class="calculator-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                             <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+                             <path d="M2 17l10 5 10-5"></path>
+                             <path d="M2 12l10 5 10-5"></path>
+                         </svg>
+                         <h3>Asphalt Calculator</h3>
+                         <p>Estimate the amount of asphalt needed for paving projects.</p>
+                     </div>
+                 </a>
+             </div>
+             <div class="see-all-link">
+                <a href="/calculators.html" class="cta-link">See all calculators &rarr;</a>
+             </div>
         </section>
-    </div>
 
-    <div class="ad-container bottom-ad">
-        <div class="ad-placeholder">Advertisement</div>
-    </div>
+    </main>
 
-    <footer class="footer">
-        <ul class="footer-menu">
-            <li><a href="about-me.html">About</a></li>
-            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
+    <footer>
+        <p>&copy; 2024 me coding. All rights reserved.</p>
+        <div class="footer-links">
+             <a href="/privacy.html">Privacy Policy</a> |
+             <a href="/contact.html">Contact Us</a>
+        </div>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
