--- a/calculators/calculators.html
+++ b/calculators/calculators.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>me coding - Calculators</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>me coding</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/calculators.html" class="active">Calculators</a></li>
+                <li><a href="/contact.html">Contact Us</a></li>
+                <li><a href="/privacy.html">Privacy Policy</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="calculators">
+            <h2>Calculators</h2>
+            <div class="calculator-grid">
+                <!-- Calculator previews will be displayed here -->
+                <div class="calculator-card" data-calculator="asphalt">
+                    <svg class="calculator-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+                        <path d="M2 17l10 5 10-5"></path>
+                        <path d="M2 12l10 5 10-5"></path>
+                    </svg>
+                    <h3>Asphalt Calculator</h3>
+                    <p>Estimate the amount of asphalt needed for a project.</p>
+                    <!-- Link could eventually go to a specific calculator page or trigger JS -->
+                    <!-- <a href="/calculators/asphalt.html">Go to calculator</a> -->
+                </div>
+                <!-- Add more calculator cards here -->
+                 <p style="grid-column: 1 / -1; text-align: center; color: #6c757d; margin-top: 1rem;">More calculators coming soon!</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 me coding. All rights reserved.</p>
+        <div class="footer-links">
+             <a href="/privacy.html">Privacy Policy</a> |
+             <a href="/contact.html">Contact Us</a>
+        </div>
+    </footer>
+
+    <!-- Add script links here if needed for specific calculator interactions later -->
+</body>
+</html>
 
